--- a/template/routine.html
+++ b/template/routine.html
@@ -34,50 +34,60 @@ routine
       id="myInput"
       onkeyup="myFunction()" placeholder="Search for Department..">
     <ul class="list-unstyled text-start" id="sortable-list">
-      <li> <a class="nav-link" href="#Computer Science ">Computer Science</a></li>
-      <li><a class="nav-link" href="#Law ">law</a></li>
-      <li><a class="nav-link" href="#Pharmacy ">Pharmacy</a></li>
+      {% for department_list in department_list %}
+          <li><a class="nav-link" href="#{{ department_list.department }} ">{{ department_list.department }}</a></li>
+      {% endfor %}
+      
     </ul>
   </div>
   
   <div class="col-9  p-3 text-center">
     {% if request.user.is_superuser %}
-  <div>
+    <div>
 
-    <button type="button"
-      class="btn btn-sm border btn-default fw-bold mx-3"
-      style="color:blue;" data-bs-toggle="modal"
-      data-bs-target="#add_syllabus">Add Syllabus</button>
-    
-  </div>
-  {%endif%}
-    <div id="Computer Science" class="card text-dark bg-light m-4"
-      style="max-width:100%; ">
-      <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Computer Science</div>
-
-      </div>
-
-      <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
-        </ul>
-      </div>
+      <button type="button"
+        class="btn btn-sm border btn-default fw-bold mx-3"
+        style="color:blue;" data-bs-toggle="modal"
+        data-bs-target="#add_Routine">Add Routine</button>
+      
     </div>
+    {%endif%}
+    {% for department_list in department_list %}
+      <div id="{{ department_list.department }}" class="card text-dark bg-light m-4"
+        style="max-width:100%; ">
+        <div class="card-header d-inline-flex ">
+          <div class="flex-fill">{{ department_list.department }}</div>
+
+        </div>
+
+        <div class="card m-4 p-3">
+          
+          <ul id="sortable-list2">
+          {%for Routine_list in routine_list%}
+          {% if department_list.department == Routine_list.routine.department.department %}
+            {% if Routine_list.pdf_file.url %}
+              <li><a href="{{ Routine_list.pdf_file.url }}" target="_blank">{{ Routine_list.routine.session_name }}</a></li>
+            {%endif%}
+          {%endif%}
+          
+          {%endfor%}
+          
+          </ul>
+          
+        </div>
+      </div>
+    {% endfor %}
 
   </div>
 </div>
 
 <!-- modal -->
-<div class="modal fade" id="add_syllabus" tabindex="-1"
+<div class="modal fade" id="add_Routine" tabindex="-1"
   aria-labelledby="addLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="addLabel">Add the Syllabus with session</h5>
+        <h5 class="modal-title" id="addLabel">Add the Routine with session</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"
           aria-label="Close"></button>
       </div>
