--- a/template/academic_notice.html
+++ b/template/academic_notice.html
@@ -4,28 +4,7 @@
 Academic
 {% endblock %}
 {% block content %}
-<nav class="navbar acadedmic_nav_color navbar-expand-sm  navbar-light ">
-
-  <div class="container-fluid  justify-content-center">
-    <ul class="navbar-nav  ">
-      <li class="nav-item  ">
-        <a class="nav-link active ms-3" href="/academic/">Syllabus</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link active ms-3" href="/routine/">Routine</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link active ms-3 " href="/question_bank/">Question Bank</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active ms-3" href="/tutorial/">Tutorial</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link active ms-3" href="/academic_notice/">Notices</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+{% include 'academic_header' %}
 
 <div class="row">
   <div class="col-3 col_color p-3 text-center" style="height: auto;">
