--- a/template/login.html
+++ b/template/login.html
@@ -26,7 +26,7 @@ Login
     <div class="row">
         <div class="col-md-6 mx-auto">
             <div class="form-container">
-                <h2 class="text-center">Registration</h2>
+                <h2 class="text-center">Login</h2>
                 <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
