--- a/template/master.html
+++ b/template/master.html
@@ -27,7 +27,6 @@
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="{% static 'js/js.js' %}"></script>
-   
     </head>
 </head>
 <body>
@@ -45,22 +44,22 @@
                         <img src="{%static 'img/logo.jpeg' %}" alt="Bootstrap" width="60" height="60">
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/">Home</a>
+                    <a class="nav-link h4 {% if request.path == '/'%}active{% endif %} link-light " href="/">Home</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/academic/">Academic</a>
+                    <a class="nav-link h4 {% if 'academic' in request.path %}active{% endif %} link-light " href="/academic/">Academic</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/blood_community/">Blood community</a>
+                    <a class="nav-link h4 {% if 'blood_community' in request.path %}active{% endif %} link-light " href="/blood_community/">Blood community</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/alumni/">Alumni</a>
+                    <a class="nav-link h4 {% if 'alumni' in request.path %}active{% endif %} link-light " href="/alumni/">Alumni</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/achievement">Achievement</a>
+                    <a class="nav-link h4 {% if 'achievement' in request.path %}active{% endif %} link-light " href="/achievement">Achievement</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 link-light " href="/notice/">Notice</a>
+                    <a class="nav-link h4 {% if 'notice' in request.path %}active{% endif %} link-light " href="/notice/">Notice</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav d-flex" >
@@ -75,10 +74,10 @@
                     {% else %} 
                     
                     <li class="nav-item">
-                        <a class="nav-link h4 link-light" href="/login">Login </a>
+                        <a class="nav-link h4 {% if 'login' in request.path %}active{% endif %} link-light" href="/login">Login </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4 link-light" href="/signup">Signup </a>
+                        <a class="nav-link h4 {% if 'signup' in request.path %}active{% endif %} link-light" href="/signup">Signup </a>
                     </li>
                     {%endif%}
                 </ul>
